k8s/donation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation-service
  namespace: helping-hands
spec:
  replicas: 2
  selector:
    matchLabels:
      app: donation-service
  template:
    metadata:
      labels:
        app: donation-service
    spec:
      containers:
        - name: donation-service
          image: anastarek/donation-service
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
