k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: helping-hands
spec:
  selector:
    app: api-gateway
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32000
  type: NodePort
