k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: helping-hands
spec:
  selector:
    app: auth-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
