k8s/campaign-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campaign-service
  namespace: helping-hands
spec:
  selector:
    app: campaign-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
