k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: helping-hands
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
