k8s/donation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation-service
  namespace: helping-hands
spec:
  selector:
    app: donation-service
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
