k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: helping-hands
spec:
  selector:
    app: frontend
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
