k8s/helpinghands-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helpinghands-ingress
  namespace: helping-hands
spec:
  ingressClassName: nginx
  rules:
    - host: helpinghands.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 9000
